<resources>
    <string name="app_name">AptmentManager</string>
    <string name="imagem_de_abertura_do_app">Imagem de abertura do app</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="avisocriarconta">Caso seja o primeiro acesso, por favor crie uma conta!</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="recuperar_senha">Esqueceu a senha? Clique aqui para recuperar.</string>
    <string name="nome">Nome</string>
    <string name="avisos">Avisos</string>
    <string name="reservas">Reservas</string>
    <string name="chamados">Chamados</string>
    <string name="autoriza_es">Autorizações</string>
    <string name="atas">Atas</string>
    <string name="regras">Regras</string>
    <string name="contatos">Contatos</string>
    <string name="servi_os">Serviços</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="settings">Configurações</string>
    <string name="warnings">AVISOS</string>
    <string name="fab_addAviso">Botão que adiciona um aviso</string>
    <string name="subject">Assunto</string>
    <string name="description">Descrição</string>
    <string name="seta_para_abrir_a_descri_o_do_aviso">Seta para abrir a descrição do aviso</string>
    <string name="assunto">Assunto</string>
    <string name="date">Data</string>
    <string name="hour">Horário</string>
    <string name="cancel">Cancelar</string>
    <string name="createWarning">Criar Aviso</string>
    <string name="alterar">Alterar Aviso</string>
    <string name="sair">Sair</string>
    <string name="anonimo">Anonimo</string>
    <string name="carregar">Carregar</string>
    <string name="url_da_imagem">URL da imagem</string>
</resources>