<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.aptmentmanager.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_reverse"
        tools:context=".ui.registerUser.RegisterScreen">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_buildingregister"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imagem_de_abertura_do_app"
                    android:paddingBottom="5dp"
                    android:src="@drawable/ic_building" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_buildingregister"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="30dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_NameRegister"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:elevation="5dp"
                            android:hint="@string/nome"
                            android:textColorHint="@color/purple_light"
                            app:boxStrokeColor="@color/purple_light">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_textNameRegister"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_EmailRegister"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/et_NameRegister"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:elevation="5dp"
                            android:hint="@string/e_mail"
                            android:textColorHint="@color/purple_light"
                            app:boxStrokeColor="@color/purple_light">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_textEmailRegister"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_PassRegister"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/et_EmailRegister"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:elevation="5dp"
                            android:hint="@string/senha"
                            android:textColorHint="@color/purple_light"
                            app:boxStrokeColor="@color/purple_light"
                            app:endIconMode="password_toggle">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_textPassRegister"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bt_createAccount"
                            android:layout_width="200dp"
                            android:layout_height="60dp"
                            android:layout_below="@id/et_PassRegister"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:backgroundTint="@color/purple_light"
                            android:elevation="10dp"
                            android:text="@string/cadastrar"
                            android:textAllCaps="false"
                            android:textSize="18sp"
                            app:cornerRadius="50dp" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:id="@+id/pb_Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_Register"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />

            </RelativeLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>